# eth2-ci

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
polling-ci/: Dockerfile  custom_ci.sh  run_eth2fuzz.sh  stop.sh
src/: main.rs
